# test-Devin06-KNB

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: python-tests.yml
notebook/: horse_racing.ipynb
src/: __init__.py  data_loader.py  feature_engineering.py  main.py  model.py  utils.py
tests/: conftest.py  test_basic.py  test_data_loader.py  test_feature_engineering.py
